--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0"
